Change somethig and fix a bug

--- a/test.html
+++ b/test.html
@@ -1,105 +1,97 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Страница, созданная с помощью Edith Ai</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      header {
-        background-color: #333;
-        color: #fff;
-        padding: 20px;
-      }
-      nav {
-        background-color: #f1f1f1;
-        text-align: center;
-        padding: 10px;
-        margin-bottom: 20px;
-      }
-      ul {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-      }
-      li {
-        display: inline-block;
-        margin-right: 10px;
-      }
-      a {
-        display: inline-block;
-        padding: 5px 10px;
-        color: #333;
-        text-decoration: none;
-      }
-      a:hover {
-        color: #fff;
-        background-color: #333;
-      }
-      main {
-        margin: 0 auto;
-        max-width: 800px;
-        padding: 20px;
-      }
-      article {
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-shadow: 0 0 10px #ccc;
-        padding: 20px;
-        margin-bottom: 20px;
-      }
-      h1, h2, h3 {
-        font-size: 28px;
-        color: #333;
-        margin: 5px 0;
-      }
-      p {
-        font-size: 16px;
-        line-height: 1.5;
-        color: #666;
-        margin: 10px 0;
-      }
-      img {
-        display: block;
-        width: 100%;
-        max-width: 500px;
-        height: auto;
-        margin: 20px auto;
-        border-radius: 5px;
-        box-shadow: 0 0 5px #ccc;
-      }
-      footer {
-        text-align: center;
-        padding: 10px;
-        background-color: #333;
-        color: #fff;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Добро пожаловать на мою страницу!</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">О нас</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-    <main>
-      <article>
-        <h2>Эта страница создана с помощью Edith Ai</h2>
-        <p>Edith Ai - это уникальный сервис, который использует искусственный интеллект для создания качественного контента для веб-страниц.</p>
-        <p>На этой странице вы можете увидеть пример того, как можно добавлять разные элементы на страницу, такие как заголовки, списки, статьи, ссылки и т.д.</p>
-        <img src="https://bekjonbegmatov.github.io/Edit-Ai/static/media/edith.f180005b.png" alt="Edith Ai" style="display: block; width: 100%; max-width: 500px; height: auto; margin: 20px auto; border-radius: 5px; box-shadow: 0 0 5px #ccc;">
-      </article>
-    </main>
-    <footer>
-      <p>© 2023 Edith Ai. Все права защищены.</p>
-    </footer>
-  </body>
+
+<head>
+    <title>Портфолио Бехруза Бегматова</title>
+    <!DOCTYPE html>
+    <html>
+
+    <head>
+        <title>Портфолио Бехруза Бегматова</title>
+        <style>
+            /* Стиль для h1 */
+            h1 {
+                font-size: 48px;
+                color: #333;
+                text-align: center;
+                background: linear-gradient(to bottom right, #3388ff, #99ccff);
+                display: inline-block;
+                padding: 10px 20px;
+                border-radius: 5px;
+                margin-bottom: 20px;
+            }
+
+            /* Стиль для ul */
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                text-align: center;
+                margin-bottom: 30px;
+            }
+
+            /* Стиль для li */
+            li {
+                font-size: 20px;
+                margin-bottom: 10px;
+            }
+
+            /* Стиль для p */
+            p {
+                font-size: 24px;
+                line-height: 1.5;
+                margin-bottom: 30px;
+            }
+
+            /* Стиль для ссылок */
+            a {
+                color: #3388ff;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: #99ccff;
+            }
+
+            /* Приложение стили к секциям портфолио */
+            .portfolio-section {
+                text-align: center;
+                margin-bottom: 40px;
+            }
+
+            /* Создание эффекта при наведении на изображение */
+            .portfolio-item img:hover {
+                transform: scale(1.1);
+            }
+        </style>
+    </head>
+
+<body>
+    <h1>Бехруз Бегматов</h1>
+    <h2>Fullstack Web Developer и Data Scientist</h2>
+    <ul>
+        <li>Имя: Бехруз</li>
+        <li>Фамилия: Бегматов</li>
+        <li>Возраст: 18 лет</li>
+        <li>Профессия: Fullstack Web Developer и Data Scientist</li>
+        <li>Опыт: 2.5 года</li>
+        <li>Почта: <a href="mailto:behruzbegmatov28@gmail.com">behruzbegmatov28@gmail.com</a></li>
+    </ul>
+    <p>Меня зовут Бехруз Бегматов, и я являюсь профессиональным Fullstack Web Developer и Data Scientist. Мои навыки и
+        опыт позволяют мне создавать высококачественные программные приложения, которые быстро и безотказно выполняют
+        свои задачи.</p>
+    <p>Кроме того, я чувствую себя комфортно в работе с обширными наборами данных, используя различные техники и
+        инструменты для их анализа и обработки. Мой опыт работы позволяет мне работать с данными любого масштаба и
+        сложности.</p>
+    <p>Мои профессиональные навыки включают такие языки программирования, как JavaScript, Python, Ruby и PHP, а также
+        базы данных MySQL, PostgreSQL и MongoDB. Я также хорошо знаю Angular, React, Node.js и другие современные
+        фреймворки и технологии.</p>
+    <p>Я имею опыт работы над различными проектами в качестве Fullstack Web Developer, что позволяет мне создавать
+        высококачественные программные продукты. Кроме того, я также работал Data Scientist, что дало мне опыт в работе
+        с данными и анализе данных любой сложности.</p>
+    <p>Я готов к новым и сложным проектам и всегда ориентирован на результат. Если вы заинтересованы в моих услугах,
+        пожалуйста, свяжитесь со мной по электронной почте behruzbegmatov28@gmail.com. Я буду рад обсудить любые
+        возможности сотрудничества и ответить на все ваши вопросы.</p>
+</body>
+
 </html>
